# google-drive-sync

./: pyproject.toml  requirements.txt
scripts/: cc_msg_filter.py
src/google_drive_sync/: photos_manager.py
tests/: conftest.py  test_integration.py
